// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-tooltip class-name="custom-class-name" 1`] = `
<div>
  <span>
    Lorem Ipsum
                            
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
   
  <span
    style="display: flex; margin-top: 15px;"
  >
    <span
      style="color: blue;"
    >
      Current class-name:
    </span>
    <span
      style="color: red;"
    >
      custom-class-name
    </span>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip close-button="false" 1`] = `
<span>
  Lorem Ipsum
  <div
    class="m-popup m-tooltip m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mTooltip-uuid-controls"
          class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
          id="mTooltip-uuid"
          style="width: 22px; height: 22px;"
          title="Ouvrir l'infobulle"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Storyshots components|m-tooltip close-title="custom-close-title" 1`] = `
<div>
  <span>
    Lorem Ipsum
                            
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
   
  <span
    style="display: flex; margin-top: 15px;"
  >
    <span
      style="color: blue;"
    >
      Current close-title:
    </span>
    <span
      style="color: red;"
    >
       custom-close-title
    </span>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip default 1`] = `
<span>
  Lorem Ipsum
  <div
    class="m-popup m-tooltip m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mTooltip-uuid-controls"
          class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
          id="mTooltip-uuid"
          style="width: 22px; height: 22px;"
          title="Ouvrir l'infobulle"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Storyshots components|m-tooltip disabled 1`] = `
<span>
  Lorem Ipsum
  <div
    class="m-popup m-tooltip m--is-inline m--is-disabled"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mTooltip-uuid-controls"
          class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple m--is-disabled"
          disabled="disabled"
          id="mTooltip-uuid"
          style="width: 22px; height: 22px;"
          title="Ouvrir l'infobulle"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Storyshots components|m-tooltip open-title="custom-open-title" 1`] = `
<div>
  <span>
    Lorem Ipsum
                            
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="custom-open-title"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
   
  <span
    style="display: flex; margin-top: 15px;"
  >
    <span
      style="color: blue;"
    >
      Current open-title:
    </span>
    <span
      style="color: red;"
    >
       custom-open-title
    </span>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/mode mode="definition" 1`] = `
<span>
  Spicy jalapeno
                        
  <div
    class="m-popup m-tooltip m--is-inline m--is-mode-definition"
  >
    <div
      class="m-popper"
    >
      <div>
        <a
          aria-controls="mTooltip-uuid-controls"
          aria-haspopup="true"
          class="m-link m-tooltip__link m--is-unvisited m--no-underline m--is-button"
          href="#"
          id="mTooltip-uuid"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span>
              bacon ipsum
            </span>
          </span>
           
          <!---->
        </a>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
  
                    dolor amet irure deserunt dolore bacon, ribeye turkey salami tongue consectetur meatball turducken
                    ball tip jowl. Chicken laborum strip steak ut picanha adipisicing turducken do doner ad prosciutto
                    pastrami ullamco.
  <p />
   
  <span />
</span>
`;

exports[`Storyshots components|m-tooltip/mode mode="icon" 1`] = `
<span>
  Lorem Ipsum
  <div
    class="m-popup m-tooltip m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mTooltip-uuid-controls"
          class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
          id="mTooltip-uuid"
          style="width: 22px; height: 22px;"
          title="Ouvrir l'infobulle"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Storyshots components|m-tooltip/mode mode="link" 1`] = `
<span>
  Spicy jalapeno
                        
  <div
    class="m-popup m-tooltip m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <a
          aria-controls="mTooltip-uuid-controls"
          aria-haspopup="true"
          class="m-link m-tooltip__link m--is-unvisited m--is-button"
          href="#"
          id="mTooltip-uuid"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span>
              bacon ipsum
            </span>
          </span>
           
          <!---->
        </a>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
  
                    dolor amet irure deserunt dolore bacon, ribeye turkey salami tongue consectetur meatball turducken
                    ball tip jowl. Chicken laborum strip steak ut picanha adipisicing turducken do doner ad prosciutto
                    pastrami ullamco.
  <p />
   
  <span />
</span>
`;

exports[`Storyshots components|m-tooltip/placement placement="bottom" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="bottom-end" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="bottom-start" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="left" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="left-end" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="left-start" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="right" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="right-end" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="right-start" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="top" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="top-end" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/placement placement="top-start" 1`] = `
<div
  style="position: relative; height: 500px; width: 875px; background: rgb(247, 247, 247);"
>
  <span
    style="position: absolute; top: 40%;"
  >
    Prow scuttle parrel provost Sail ho shrouds spirits
                        boom mizzenmast yardarm.
                                
    <div
      class="m-popup m-tooltip m--is-inline"
    >
      <div
        class="m-popper"
      >
        <div>
          <button
            aria-controls="mTooltip-uuid-controls"
            class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
            id="mTooltip-uuid"
            style="width: 22px; height: 22px;"
            title="Ouvrir l'infobulle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`Storyshots components|m-tooltip/size size="large" 1`] = `
<span>
  Lorem Ipsum
  <div
    class="m-popup m-tooltip m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mTooltip-uuid-controls"
          class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
          id="mTooltip-uuid"
          style="width: 22px; height: 22px;"
          title="Ouvrir l'infobulle"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Storyshots components|m-tooltip/size size="small" 1`] = `
<span>
  Lorem Ipsum
  <div
    class="m-popup m-tooltip m--is-inline"
  >
    <div
      class="m-popper"
    >
      <div>
        <button
          aria-controls="mTooltip-uuid-controls"
          class="m-icon-button m-tooltip__icon m--is-skin-light m--has-ripple"
          id="mTooltip-uuid"
          style="width: 22px; height: 22px;"
          title="Ouvrir l'infobulle"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-icon-button__icon"
            height="20px"
            width="20px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
           
          <!---->
        </button>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;
